[gd_scene load_steps=77 format=3 uid="uid://gao1je8jpkpk"]

[ext_resource type="Texture2D" uid="uid://hk7ole3fkrbf" path="res://sprites/plant_room/windows.png" id="2_7ntu0"]
[ext_resource type="PackedScene" uid="uid://qi51764v7mh7" path="res://scenes/plants/kalanchoe_blossfeldiana.tscn" id="2_r6sxj"]
[ext_resource type="PackedScene" uid="uid://bf65ywlrwh3hp" path="res://scenes/plant_room/garden_slot.tscn" id="2_vglss"]
[ext_resource type="PackedScene" uid="uid://4um7sgslreot" path="res://scenes/plants/pelargonium_graveolens.tscn" id="3_gag1u"]
[ext_resource type="Theme" uid="uid://b4uu16ao6kfi0" path="res://themes/new_theme.tres" id="4_6rbcv"]
[ext_resource type="Texture2D" uid="uid://brw672mg4askh" path="res://sprites/plant_room/room.png" id="4_k66hf"]
[ext_resource type="Script" uid="uid://cbkysea36ql0x" path="res://scripts/plant_room/UI/plant_room.ui.gd" id="4_l1uuk"]
[ext_resource type="PackedScene" uid="uid://daq8dsycavxmg" path="res://scenes/plants/viola_odorata.tscn" id="4_tbwg4"]
[ext_resource type="PackedScene" uid="uid://caewdw8oos7ly" path="res://scenes/plants/lilium_candinum.tscn" id="5_cxd46"]
[ext_resource type="PackedScene" uid="uid://ctororhwgysd7" path="res://scenes/plants/aloe_vera.tscn" id="5_pstx4"]
[ext_resource type="Texture2D" uid="uid://dcs5h6fr8gkt2" path="res://sprites/plant_room/UI/handbook.png" id="5_tbtck"]
[ext_resource type="Texture2D" uid="uid://pkiaopwi015v" path="res://sprites/plant_room/bgPlantRoomMary_n_5.png" id="5_ytfrs"]
[ext_resource type="PackedScene" uid="uid://07ruaduj1qx0" path="res://scenes/plants/phaleonopsis_stuariana.tscn" id="6_8ear1"]
[ext_resource type="Texture2D" uid="uid://dsolnq53gnw6e" path="res://sprites/plant_room/UI/door.png" id="6_fv2ki"]
[ext_resource type="Texture2D" uid="uid://cga7up24vw41p" path="res://sprites/plant_room/UI/clock_phase/clock_phase_2.png" id="6_gxb4b"]
[ext_resource type="Script" uid="uid://b32rmceec1j3s" path="res://scripts/plant_room/UI/time_phase_sprite.gd" id="7_f5rt3"]
[ext_resource type="Texture2D" uid="uid://jf3wp03c3x04" path="res://sprites/plant_room/UI/calendar.png" id="7_fv2ki"]
[ext_resource type="Texture2D" uid="uid://dbme5d2q75mf2" path="res://sprites/plant_room/UI/clock_phase/clock_phase_4.png" id="8_6rbcv"]
[ext_resource type="Texture2D" uid="uid://di0yw08o6dxnj" path="res://sprites/pixel_sprites/mary/mary_garden_anim.png" id="8_vwt8o"]
[ext_resource type="Texture2D" uid="uid://cpp5wvkxthenm" path="res://sprites/plant_room/UI/clock_phase/clock_phase_5.png" id="9_34jyk"]
[ext_resource type="Script" uid="uid://d21o7gpdc68jr" path="res://scripts/plant_room/plant_room_scene_navigator.gd" id="9_gngg7"]
[ext_resource type="PackedScene" uid="uid://bwqsvc17c5c5j" path="res://scenes/plants/chlorophytum_comosum.tscn" id="10_bqpbp"]
[ext_resource type="Texture2D" uid="uid://d0xy37k81apml" path="res://sprites/plant_room/UI/clock_phase/clock_phase_1.png" id="10_cedpl"]
[ext_resource type="Texture2D" uid="uid://55jyrf7cq87h" path="res://sprites/plant_room/UI/clock_phase/clock_phase_6.png" id="10_mkj6r"]
[ext_resource type="Texture2D" uid="uid://ricu78kl72fu" path="res://sprites/plant_room/UI/clock_phase/clock_phase_7.png" id="11_4tg3j"]
[ext_resource type="Texture2D" uid="uid://xqp4rohkygc2" path="res://sprites/plant_room/UI/clock_phase/clock_phase_8.png" id="12_i121n"]
[ext_resource type="Texture2D" uid="uid://qeixo8fu55sn" path="res://sprites/plant_room/UI/clock_phase/clock_phase_3.png" id="13_7ntu0"]
[ext_resource type="FontFile" uid="uid://b6q0wvaf10l3g" path="res://resources/fonts/Micro_5/Micro5-Regular.ttf" id="18_f5rt3"]
[ext_resource type="PackedScene" uid="uid://djukkjpwshclx" path="res://scenes/t_ime_clock.tscn" id="19_02e7d"]
[ext_resource type="Script" uid="uid://c1mu4sgebqw3e" path="res://scripts/plant_room/UI/garden_slot.gd" id="23_tmx1f"]
[ext_resource type="PackedScene" uid="uid://cti7uh2emmyxi" path="res://scenes/plants/bergenia_crassoifolia.tscn" id="26_tcsdn"]
[ext_resource type="Script" uid="uid://dwsm1qsvjsd86" path="res://scripts/plant_room/light.gd" id="28_4tg3j"]
[ext_resource type="Script" uid="uid://bwnfyrfw6j4g5" path="res://scripts/ui/money_label.gd" id="37_bqpbp"]
[ext_resource type="Texture2D" uid="uid://ckcfwq1ms2nfo" path="res://sprites/plant_workshop/plant_workshop_button_.png" id="42_8ear1"]
[ext_resource type="Texture2D" uid="uid://by0o8ugku6jov" path="res://sprites/plant_workshop/plant_workshop_button_outline.png" id="43_f5syj"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1gmqi"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(100, 100, 1)
gravity = Vector3(0, 10, 0)
color = Color(0.88, 0.88, 0.88, 1)
turbulence_enabled = true
turbulence_noise_strength = 9.86
turbulence_noise_scale = 3.602
turbulence_influence_max = 0.233

[sub_resource type="AtlasTexture" id="AtlasTexture_dybbd"]
atlas = ExtResource("8_vwt8o")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_haf8u"]
atlas = ExtResource("8_vwt8o")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3blf"]
atlas = ExtResource("8_vwt8o")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mera4"]
atlas = ExtResource("8_vwt8o")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcbjt"]
atlas = ExtResource("8_vwt8o")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi008"]
atlas = ExtResource("8_vwt8o")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yuik"]
atlas = ExtResource("8_vwt8o")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gg2s"]
atlas = ExtResource("8_vwt8o")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_whawl"]
atlas = ExtResource("8_vwt8o")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kwsg"]
atlas = ExtResource("8_vwt8o")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbchs"]
atlas = ExtResource("8_vwt8o")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk6l6"]
atlas = ExtResource("8_vwt8o")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp0d2"]
atlas = ExtResource("8_vwt8o")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2pry"]
atlas = ExtResource("8_vwt8o")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2v8v"]
atlas = ExtResource("8_vwt8o")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f6eb"]
atlas = ExtResource("8_vwt8o")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_55opu"]
atlas = ExtResource("8_vwt8o")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv7iv"]
atlas = ExtResource("8_vwt8o")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_py1am"]
atlas = ExtResource("8_vwt8o")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp5ic"]
atlas = ExtResource("8_vwt8o")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr0e7"]
atlas = ExtResource("8_vwt8o")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y1q7"]
atlas = ExtResource("8_vwt8o")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m34h"]
atlas = ExtResource("8_vwt8o")
region = Rect2(1408, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_koy2t"]
atlas = ExtResource("8_vwt8o")
region = Rect2(1472, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_odtig"]
atlas = ExtResource("8_vwt8o")
region = Rect2(1536, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0taes"]
atlas = ExtResource("8_vwt8o")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_c7t48"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dybbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haf8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3blf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mera4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcbjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi008")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yuik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gg2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whawl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kwsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbchs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk6l6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp0d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2pry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2v8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f6eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55opu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv7iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_py1am")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp5ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr0e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y1q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m34h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koy2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odtig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0taes")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_7ntu0"]
offsets = PackedFloat32Array(0.05, 0.56, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.631579, 0.631579, 0.631579, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k66hf"]
gradient = SubResource("Gradient_7ntu0")
fill = 2
fill_from = Vector2(0.445122, 0.256098)
fill_to = Vector2(0.426829, 1)

[sub_resource type="Gradient" id="Gradient_tbtck"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fv2ki"]
gradient = SubResource("Gradient_tbtck")
fill_from = Vector2(0.519481, 1)
fill_to = Vector2(0.497835, 0)

[sub_resource type="CanvasTexture" id="CanvasTexture_4tg3j"]
diffuse_texture = ExtResource("4_k66hf")
normal_texture = ExtResource("5_ytfrs")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mkj6r"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7ntu0"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_23luj"]
light_mode = 1

[sub_resource type="SpriteFrames" id="SpriteFrames_k66hf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_6rbcv")
}, {
"duration": 1.0,
"texture": ExtResource("9_34jyk")
}, {
"duration": 1.0,
"texture": ExtResource("10_mkj6r")
}],
"loop": false,
"name": &"day_to_evenenig",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_mkj6r")
}, {
"duration": 1.0,
"texture": ExtResource("11_4tg3j")
}, {
"duration": 1.0,
"texture": ExtResource("12_i121n")
}],
"loop": false,
"name": &"evening_to_night",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_gxb4b")
}, {
"duration": 1.0,
"texture": ExtResource("13_7ntu0")
}, {
"duration": 1.0,
"texture": ExtResource("8_6rbcv")
}],
"loop": false,
"name": &"morning_to_day",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_i121n")
}, {
"duration": 1.0,
"texture": ExtResource("10_cedpl")
}, {
"duration": 1.0,
"texture": ExtResource("6_gxb4b")
}],
"loop": false,
"name": &"night_to_morning",
"speed": 5.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ytfrs"]
light_mode = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ntu0"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_tmx1f"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_02e7d"]
light_mode = 1

[node name="PlantRoom" type="Node2D"]
script = ExtResource("9_gngg7")
plants_to_add = Dictionary[String, PackedScene]({
"kalanchoe": ExtResource("2_r6sxj"),
"lilium": ExtResource("5_cxd46"),
"pelargonium": ExtResource("3_gag1u"),
"phaleonopsis": ExtResource("6_8ear1"),
"viola": ExtResource("4_tbwg4")
})

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -6

[node name="GPUParticles2D" type="GPUParticles2D" parent="CanvasLayer"]
position = Vector2(157, 92.0002)
scale = Vector2(1.64, 1)
amount = 15
lifetime = 10.0
preprocess = 10.0
process_material = SubResource("ParticleProcessMaterial_1gmqi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer"]
self_modulate = Color(0.96, 0.864, 0.9136, 1)
light_mask = 8
position = Vector2(276, 32.0002)
sprite_frames = SubResource("SpriteFrames_c7t48")
autoplay = "default"
frame = 12
frame_progress = 0.783715

[node name="PointLight2D" type="PointLight2D" parent="CanvasLayer"]
position = Vector2(159.5, 29.5002)
scale = Vector2(7.67187, 1.79688)
energy = 0.2
range_layer_min = -6
range_item_cull_mask = 6
texture = SubResource("GradientTexture2D_k66hf")
height = 670.0

[node name="Light" type="Node" parent="CanvasLayer"]
script = ExtResource("28_4tg3j")

[node name="rays" type="Node" parent="CanvasLayer/Light"]

[node name="Ray1" type="PointLight2D" parent="CanvasLayer/Light/rays"]
position = Vector2(-51.608, 10.352)
scale = Vector2(0.231, 6.261)
color = Color(1, 0.706, 0.02, 1)
energy = 2.75
range_layer_min = -10
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_fv2ki")
height = 55.0

[node name="Ray2" type="PointLight2D" parent="CanvasLayer/Light/rays"]
position = Vector2(-51.608, 10.352)
scale = Vector2(0.231, 6.261)
color = Color(1, 0.706, 0.02, 0)
energy = 2.75
range_layer_min = -10
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_fv2ki")
height = 55.0

[node name="Ray3" type="PointLight2D" parent="CanvasLayer/Light/rays"]
position = Vector2(-51.608, 10.352)
scale = Vector2(0.231, 6.261)
color = Color(1, 0.706, 0.02, 1)
energy = 2.75
range_layer_min = -10
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_fv2ki")
height = 55.0

[node name="Ray4" type="PointLight2D" parent="CanvasLayer/Light/rays"]
position = Vector2(-51.608, 10.352)
scale = Vector2(0.231, 6.261)
color = Color(1, 0.706, 0.02, 1)
energy = 2.75
range_layer_min = -10
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_fv2ki")
height = 55.0

[node name="Ray5" type="PointLight2D" parent="CanvasLayer/Light/rays"]
position = Vector2(-51.608, 10.352)
scale = Vector2(0.231, 6.261)
color = Color(1, 0.706, 0.02, 1)
energy = 2.75
range_layer_min = -10
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_fv2ki")
height = 55.0

[node name="Ray6" type="PointLight2D" parent="CanvasLayer/Light/rays"]
position = Vector2(-51.608, 10.352)
scale = Vector2(0.231, 6.261)
color = Color(1, 0.706, 0.02, 1)
energy = 2.75
range_layer_min = -10
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_fv2ki")
height = 55.0

[node name="Ray7" type="PointLight2D" parent="CanvasLayer/Light/rays"]
position = Vector2(-51.608, 10.352)
scale = Vector2(0.231, 6.261)
color = Color(1, 0.706, 0.02, 1)
energy = 2.75
range_layer_min = -10
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_fv2ki")
height = 55.0

[node name="Ray8" type="PointLight2D" parent="CanvasLayer/Light/rays"]
position = Vector2(-51.608, 10.352)
scale = Vector2(0.231, 6.261)
color = Color(1, 0.706, 0.02, 1)
energy = 2.75
range_layer_min = -10
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_fv2ki")
height = 55.0

[node name="Ray9" type="PointLight2D" parent="CanvasLayer/Light/rays"]
position = Vector2(-51.608, 10.352)
scale = Vector2(0.231, 6.261)
color = Color(1, 0.706, 0.02, 1)
energy = 2.75
range_layer_min = -10
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_fv2ki")
height = 55.0

[node name="Ray10" type="PointLight2D" parent="CanvasLayer/Light/rays"]
position = Vector2(-51.608, 10.352)
scale = Vector2(0.231, 6.261)
color = Color(1, 0.706, 0.02, 1)
energy = 2.75
range_layer_min = -10
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_fv2ki")
height = 55.0

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer/Light"]
visibility_layer = 2
color = Color(0.517067, 0.308, 0.7, 1)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="CanvasLayer/Light"]
position = Vector2(-31, 0)
energy = 0.25
range_layer_min = -10
range_layer_max = -6
range_item_cull_mask = 2
height = 0.44

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer"]
light_mask = 4
z_index = -3
position = Vector2(160, 27.0002)
texture = ExtResource("2_7ntu0")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
light_mask = 2
z_index = -1
position = Vector2(160, 90.0002)
texture = SubResource("CanvasTexture_4tg3j")

[node name="GardenSlots" type="Node2D" parent="CanvasLayer"]
unique_name_in_owner = true
position = Vector2(-1.00015, -1.99984)
script = ExtResource("23_tmx1f")

[node name="GardenSlot" parent="CanvasLayer/GardenSlots" groups=["high_sunlight", "humid", "table"] instance=ExtResource("2_vglss")]
position = Vector2(31, 43)

[node name="AloeVera" parent="CanvasLayer/GardenSlots/GardenSlot" instance=ExtResource("5_pstx4")]
light_mask = 3
position = Vector2(31, 41)

[node name="GardenSlot2" parent="CanvasLayer/GardenSlots" groups=["high_sunlight", "humid", "table"] instance=ExtResource("2_vglss")]
position = Vector2(55, 43)

[node name="BergeniaCrassoifolia" parent="CanvasLayer/GardenSlots/GardenSlot2" instance=ExtResource("26_tcsdn")]
position = Vector2(55, 41)

[node name="GardenSlot3" parent="CanvasLayer/GardenSlots" groups=["high_sunlight", "humid", "table"] instance=ExtResource("2_vglss")]
position = Vector2(80, 43)

[node name="ChlorophytumComosum" parent="CanvasLayer/GardenSlots/GardenSlot3" instance=ExtResource("10_bqpbp")]
position = Vector2(80, 41)

[node name="GardenSlot4" parent="CanvasLayer/GardenSlots" groups=["high_sunlight", "humid", "table"] instance=ExtResource("2_vglss")]
position = Vector2(104, 43)

[node name="KalanchoeBlossfeldiana" parent="CanvasLayer/GardenSlots/GardenSlot4" instance=ExtResource("2_r6sxj")]

[node name="GardenSlot5" parent="CanvasLayer/GardenSlots" groups=["high_sunlight"] instance=ExtResource("2_vglss")]
position = Vector2(155, 34)

[node name="GardenSlot6" parent="CanvasLayer/GardenSlots" groups=["high_sunlight"] instance=ExtResource("2_vglss")]
position = Vector2(179, 34)

[node name="GardenSlot7" parent="CanvasLayer/GardenSlots" groups=["high_sunlight"] instance=ExtResource("2_vglss")]
position = Vector2(204, 34)

[node name="GardenSlot8" parent="CanvasLayer/GardenSlots" groups=["high_sunlight"] instance=ExtResource("2_vglss")]
position = Vector2(228, 34)

[node name="GardenSlot9" parent="CanvasLayer/GardenSlots" groups=["high_sunlight", "humid"] instance=ExtResource("2_vglss")]
position = Vector2(27, 80)

[node name="GardenSlot10" parent="CanvasLayer/GardenSlots" groups=["high_sunlight", "humid"] instance=ExtResource("2_vglss")]
position = Vector2(51, 80)

[node name="GardenSlot11" parent="CanvasLayer/GardenSlots" groups=["high_sunlight", "humid"] instance=ExtResource("2_vglss")]
position = Vector2(76, 80)

[node name="GardenSlot12" parent="CanvasLayer/GardenSlots" groups=["high_sunlight", "humid"] instance=ExtResource("2_vglss")]
position = Vector2(100, 80)

[node name="GardenSlot13" parent="CanvasLayer/GardenSlots" groups=["high_sunlight", "table"] instance=ExtResource("2_vglss")]
position = Vector2(154, 83)

[node name="PelargoniumGraveolens" parent="CanvasLayer/GardenSlots/GardenSlot13" instance=ExtResource("3_gag1u")]

[node name="GardenSlot14" parent="CanvasLayer/GardenSlots" groups=["high_sunlight", "table"] instance=ExtResource("2_vglss")]
position = Vector2(178, 83)

[node name="GardenSlot15" parent="CanvasLayer/GardenSlots" groups=["high_sunlight", "table"] instance=ExtResource("2_vglss")]
position = Vector2(203, 83)

[node name="GardenSlot16" parent="CanvasLayer/GardenSlots" groups=["high_sunlight", "table"] instance=ExtResource("2_vglss")]
position = Vector2(227, 83)

[node name="GardenSlot17" parent="CanvasLayer/GardenSlots" groups=["humid", "table"] instance=ExtResource("2_vglss")]
position = Vector2(27, 114)

[node name="GardenSlot18" parent="CanvasLayer/GardenSlots" groups=["humid", "table"] instance=ExtResource("2_vglss")]
position = Vector2(51, 114)

[node name="GardenSlot19" parent="CanvasLayer/GardenSlots" groups=["humid", "table"] instance=ExtResource("2_vglss")]
position = Vector2(76, 114)

[node name="GardenSlot20" parent="CanvasLayer/GardenSlots" groups=["humid", "table"] instance=ExtResource("2_vglss")]
position = Vector2(100, 114)

[node name="GardenSlot21" parent="CanvasLayer/GardenSlots" instance=ExtResource("2_vglss")]
position = Vector2(154, 121)

[node name="GardenSlot22" parent="CanvasLayer/GardenSlots" instance=ExtResource("2_vglss")]
position = Vector2(178, 121)

[node name="GardenSlot23" parent="CanvasLayer/GardenSlots" instance=ExtResource("2_vglss")]
position = Vector2(203, 121)

[node name="GardenSlot24" parent="CanvasLayer/GardenSlots" instance=ExtResource("2_vglss")]
position = Vector2(227, 121)

[node name="GardenSlot25" parent="CanvasLayer/GardenSlots" groups=["humid"] instance=ExtResource("2_vglss")]
position = Vector2(27, 161)

[node name="GardenSlot26" parent="CanvasLayer/GardenSlots" groups=["humid"] instance=ExtResource("2_vglss")]
position = Vector2(51, 161)

[node name="GardenSlot27" parent="CanvasLayer/GardenSlots" groups=["humid"] instance=ExtResource("2_vglss")]
position = Vector2(76, 161)

[node name="GardenSlot28" parent="CanvasLayer/GardenSlots" groups=["humid"] instance=ExtResource("2_vglss")]
position = Vector2(100, 161)

[node name="GardenSlot29" parent="CanvasLayer/GardenSlots" groups=["table"] instance=ExtResource("2_vglss")]
position = Vector2(155, 145)

[node name="GardenSlot30" parent="CanvasLayer/GardenSlots" groups=["table"] instance=ExtResource("2_vglss")]
position = Vector2(179, 145)

[node name="GardenSlot31" parent="CanvasLayer/GardenSlots" groups=["table"] instance=ExtResource("2_vglss")]
position = Vector2(204, 145)

[node name="GardenSlot32" parent="CanvasLayer/GardenSlots" groups=["table"] instance=ExtResource("2_vglss")]
position = Vector2(228, 145)

[node name="CanvasLayerUI" type="CanvasLayer" parent="."]
layer = -1

[node name="UI" type="Control" parent="CanvasLayerUI"]
light_mask = 0
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 28.0
theme = ExtResource("4_6rbcv")
script = ExtResource("4_l1uuk")

[node name="DateButton" type="Button" parent="CanvasLayerUI/UI"]
material = SubResource("CanvasItemMaterial_mkj6r")
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
theme_type_variation = &"blank_button"

[node name="TImeClock" parent="CanvasLayerUI/UI/DateButton" instance=ExtResource("19_02e7d")]
position = Vector2(19, 15)

[node name="TimePhaseSprite" type="Sprite2D" parent="CanvasLayerUI/UI/DateButton"]
material = SubResource("CanvasItemMaterial_7ntu0")
position = Vector2(33, 9)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_gxb4b")
script = ExtResource("7_f5rt3")

[node name="TimePhaseAnimated" type="AnimatedSprite2D" parent="CanvasLayerUI/UI/DateButton/TimePhaseSprite"]
material = SubResource("CanvasItemMaterial_23luj")
sprite_frames = SubResource("SpriteFrames_k66hf")
animation = &"morning_to_day"

[node name="Calendar" type="Sprite2D" parent="CanvasLayerUI/UI/DateButton"]
material = SubResource("CanvasItemMaterial_ytfrs")
position = Vector2(6, 7)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_fv2ki")

[node name="CalendarLabel" type="Label" parent="CanvasLayerUI/UI/DateButton/Calendar"]
offset_left = -6.0
offset_top = -12.0
offset_right = 1.0
offset_bottom = -1.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.75, 0.2625, 0.286875, 1)
theme_override_fonts/font = ExtResource("18_f5rt3")
theme_override_font_sizes/font_size = 10
text = "20"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="CanvasLayerUI/UI"]
z_index = -1
layout_mode = 0
offset_right = 40.0
offset_bottom = 28.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_7ntu0")

[node name="HandbookButton" type="TextureButton" parent="CanvasLayerUI/UI/Panel"]
material = SubResource("CanvasItemMaterial_tmx1f")
layout_mode = 2
offset_left = 4.0
offset_right = 36.0
offset_bottom = 32.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 0
mouse_filter = 1
texture_normal = ExtResource("5_tbtck")

[node name="DoorButton" type="TextureButton" parent="CanvasLayerUI/UI/Panel"]
material = SubResource("CanvasItemMaterial_02e7d")
layout_mode = 0
offset_left = 7.0
offset_top = -2.0
offset_right = 39.0
offset_bottom = 38.0
scale = Vector2(0.8, 0.8)
mouse_filter = 1
texture_normal = ExtResource("6_fv2ki")

[node name="MoneyLabel" type="Label" parent="CanvasLayerUI/UI"]
layout_mode = 0
offset_left = 300.0
offset_top = 1.0
offset_right = 320.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(0.650708, 0.97, 0.2037, 1)
theme_override_fonts/font = ExtResource("18_f5rt3")
theme_override_font_sizes/font_size = 11
text = "1000€"
script = ExtResource("37_bqpbp")

[node name="Button" type="Button" parent="CanvasLayerUI"]
visible = false
z_index = 9
offset_left = 266.0
offset_top = 164.0
offset_right = 321.0
offset_bottom = 179.0
theme_override_font_sizes/font_size = 5
text = "phase"

[node name="WorkshopButton" type="TextureButton" parent="CanvasLayerUI"]
offset_left = 289.0
offset_top = 69.0
offset_right = 323.0
offset_bottom = 151.0
texture_normal = ExtResource("42_8ear1")
texture_pressed = ExtResource("43_f5syj")
texture_hover = ExtResource("43_f5syj")
texture_disabled = ExtResource("42_8ear1")
texture_focused = ExtResource("42_8ear1")

[connection signal="animation_finished" from="CanvasLayerUI/UI/DateButton/TimePhaseSprite/TimePhaseAnimated" to="CanvasLayerUI/UI/DateButton/TimePhaseSprite" method="_on_time_phase_animated_animation_finished"]
[connection signal="mouse_entered" from="CanvasLayerUI/UI/Panel" to="CanvasLayerUI/UI" method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayerUI/UI/Panel" to="CanvasLayerUI/UI" method="_on_panel_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayerUI/UI/Panel/HandbookButton" to="CanvasLayerUI/UI" method="_on_handbook_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayerUI/UI/Panel/HandbookButton" to="CanvasLayerUI/UI" method="_on_handbook_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayerUI/UI/Panel/HandbookButton" to="CanvasLayerUI/UI" method="_on_handbook_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayerUI/UI/Panel/DoorButton" to="CanvasLayerUI/UI" method="_on_door_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayerUI/UI/Panel/DoorButton" to="CanvasLayerUI/UI" method="_on_door_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayerUI/UI/Panel/DoorButton" to="." method="_on_door_button_pressed"]
[connection signal="pressed" from="CanvasLayerUI/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayerUI/WorkshopButton" to="CanvasLayerUI/UI" method="_on_workshop_button_pressed"]
